--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "publisher": "lvzhenbo",
   "license": "SEE LICENSE IN LICENSE",
-  "icon": "logo.svg",
+  "icon": "logo.png",
   "engines": {
     "vscode": "^1.71.0"
   },
